tests/baselines/reference/conditionalTypesSimplifyWhenTrivial.errors.txt
tests/cases/compiler/conditionalTypesSimplifyWhenTrivial.ts(3,14): error TS2322: Type 'Pick<Params, Exclude<keyof Params, never>>' is not assignable to type 'Params'.
  'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, Exclude<keyof Params, never>>'.
tests/cases/compiler/conditionalTypesSimplifyWhenTrivial.ts(12,14): error TS2322: Type 'Pick<Params, Extract<keyof Params, keyof Params>>' is not assignable to type 'Params'.
  'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, Extract<keyof Params, keyof Params>>'.
tests/cases/compiler/conditionalTypesSimplifyWhenTrivial.ts(27,14): error TS2322: Type 'Pick<Params, ExcludeWithDefault<keyof Params, never, never>>' is not assignable to type 'Params'.
  'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, ExcludeWithDefault<keyof Params, never, never>>'.
tests/cases/compiler/conditionalTypesSimplifyWhenTrivial.ts(36,14): error TS2322: Type 'Pick<Params, ExtractWithDefault<keyof Params, keyof Params, never>>' is not assignable to type 'Params'.
  'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, ExtractWithDefault<keyof Params, keyof Params, never>>'.
tests/cases/compiler/conditionalTypesSimplifyWhenTrivial.ts(47,14): error TS2322: Type 'Pick<Params, TemplatedConditional<keyof Params, never, never, keyof Params>>' is not assignable to type 'Params'.
  'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, TemplatedConditional<keyof Params, never, never, keyof Params>>'.
tests/cases/compiler/conditionalTypesSimplifyWhenTrivial.ts(56,14): error TS2322: Type 'Pick<Params, TemplatedConditional<keyof Params, keyof Params, keyof Params, never>>' is not assignable to type 'Params'.
  'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, TemplatedConditional<keyof Params, keyof Params, keyof Params, never>>'.


==== tests/cases/compiler/conditionalTypesSimplifyWhenTrivial.ts (6 errors) ====
    const fn1 = <Params>(
        params: Pick<Params, Exclude<keyof Params, never>>,
    ): Params => params;
                 ~~~~~~
!!! error TS2322: Type 'Pick<Params, Exclude<keyof Params, never>>' is not assignable to type 'Params'.
!!! error TS2322:   'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, Exclude<keyof Params, never>>'.
    
    function fn2<T>(x: Exclude<T, never>) {
        var y: T = x;
        x = y;
    }
    
    const fn3 = <Params>(
        params: Pick<Params, Extract<keyof Params, keyof Params>>,
    ): Params => params;
                 ~~~~~~
!!! error TS2322: Type 'Pick<Params, Extract<keyof Params, keyof Params>>' is not assignable to type 'Params'.
!!! error TS2322:   'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, Extract<keyof Params, keyof Params>>'.
    
    function fn4<T>(x: Extract<T, T>) {
        var y: T = x;
        x = y;
    }
    
    declare var x: Extract<number | string, any>; // Should be `numebr | string` and not `any`
    
    type ExtractWithDefault<T, U, D = never> = T extends U ? T : D;
    
    type ExcludeWithDefault<T, U, D = never> = T extends U ? D : T;
    
    const fn5 = <Params>(
        params: Pick<Params, ExcludeWithDefault<keyof Params, never>>,
    ): Params => params;
                 ~~~~~~
!!! error TS2322: Type 'Pick<Params, ExcludeWithDefault<keyof Params, never, never>>' is not assignable to type 'Params'.
!!! error TS2322:   'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, ExcludeWithDefault<keyof Params, never, never>>'.
    
    function fn6<T>(x: ExcludeWithDefault<T, never>) {
        var y: T = x;
        x = y;
    }
    
    const fn7 = <Params>(
        params: Pick<Params, ExtractWithDefault<keyof Params, keyof Params>>,
    ): Params => params;
                 ~~~~~~
!!! error TS2322: Type 'Pick<Params, ExtractWithDefault<keyof Params, keyof Params, never>>' is not assignable to type 'Params'.
!!! error TS2322:   'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, ExtractWithDefault<keyof Params, keyof Params, never>>'.
    
    function fn8<T>(x: ExtractWithDefault<T, T>) {
        var y: T = x;
        x = y;
    }
    
    type TemplatedConditional<TCheck, TExtends, TTrue, TFalse> = TCheck extends TExtends ? TTrue : TFalse;
    
    const fn9 = <Params>(
        params: Pick<Params, TemplatedConditional<keyof Params, never, never, keyof Params>>,
    ): Params => params;
                 ~~~~~~
!!! error TS2322: Type 'Pick<Params, TemplatedConditional<keyof Params, never, never, keyof Params>>' is not assignable to type 'Params'.
!!! error TS2322:   'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, TemplatedConditional<keyof Params, never, never, keyof Params>>'.
    
    function fn10<T>(x: TemplatedConditional<T, never, never, T>) {
        var y: T = x;
        x = y;
    }
    
    const fn11 = <Params>(
        params: Pick<Params, TemplatedConditional<keyof Params, keyof Params, keyof Params, never>>,
    ): Params => params;
                 ~~~~~~
!!! error TS2322: Type 'Pick<Params, TemplatedConditional<keyof Params, keyof Params, keyof Params, never>>' is not assignable to type 'Params'.
!!! error TS2322:   'Params' could be instantiated with an arbitrary type which could be unrelated to 'Pick<Params, TemplatedConditional<keyof Params, keyof Params, keyof Params, never>>'.
    
    function fn12<T>(x: TemplatedConditional<T, T, T, never>) {
        var y: T = x;
        x = y;
    }
    
    declare var z: any;
    const zee = z!!!; // since x is `any`, `x extends null | undefined` should be both true and false - and thus yield `any` 
    